tests/compile_fail/schema_on_tuple_struct.rs
use acube::prelude::*;

#[derive(AcubeSchema, Debug)]
pub struct TupleStruct(String, i32);

fn main() {}
