tests/compile_fail/schema_on_tuple_struct.stderr
error: AcubeSchema only supports named fields
 --> $WORKSPACE/tests/compile_fail/schema_on_tuple_struct.rs
  |
  | pub struct TupleStruct(String, i32);
  |            ^^^^^^^^^^^
